Bugfix Bot nickname in command causes exceptions during mappings Added bot nickname replacement logic into message metadata mapper